force-app/main/default/objects/ReferenceHRGActivity__c/ReferenceHRGActivity__c.object-meta.xml
<CustomObject>
    <label>Reference HRG Activity</label>
    <nameField>
        <displayFormat>Activity-{0000000}</displayFormat>
        <label>Reference HRG Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference HRG Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>