force-app/main/default/objects/ReferenceHRGActivity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Prospect-Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference HRG Activities</relationshipLabel>
    <relationshipName>Reference_HRG_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>