force-app/main/default/objects/ReferenceHRGActivity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1st Invoice Review</fullName>
            </value>
            <value>
                <fullName>401(k) Enrollment</fullName>
            </value>
            <value>
                <fullName>401(k) Enrollment with Auto-Enrollment</fullName>
            </value>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>401k Client Contact Meeting</fullName>
            </value>
            <value>
                <fullName>401k Compliance Testing Review</fullName>
            </value>
            <value>
                <fullName>401k Enrollment</fullName>
            </value>
            <value>
                <fullName>Addressing Common Employee Relations Issues</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: All Modules Completed</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: Module 1</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: Module 2</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: Module 3</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: Module 4</fullName>
            </value>
            <value>
                <fullName>Addressing EE Relations Issues: Module 5</fullName>
            </value>
            <value>
                <fullName>Affirmative Action</fullName>
            </value>
            <value>
                <fullName>Americans with Disabilities Act</fullName>
            </value>
            <value>
                <fullName>Attendance Issues-Module 2</fullName>
            </value>
            <value>
                <fullName>Attended Branch Training</fullName>
            </value>
            <value>
                <fullName>Avoiding Employment Discrimination</fullName>
            </value>
            <value>
                <fullName>Background Checks</fullName>
            </value>
            <value>
                <fullName>Background Check Services</fullName>
            </value>
            <value>
                <fullName>Behavioral Interviewing</fullName>
            </value>
            <value>
                <fullName>Being an Effective Team Member</fullName>
            </value>
            <value>
                <fullName>Being an Inclusive Coworker</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Benefits – Product Discussions</fullName>
            </value>
            <value>
                <fullName>Benefits – Time Away from Work</fullName>
            </value>
            <value>
                <fullName>Bene Trac</fullName>
            </value>
            <value>
                <fullName>Billing/Invoicing</fullName>
            </value>
            <value>
                <fullName>Bridging the Generational Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>