force-app/main/default/objects/ReferenceHRGActivity__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the last activity occurred.</inlineHelpText>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>