force-app/main/default/objects/ReferenceHRGActivity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <inlineHelpText>The type of activity</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Activity</fullName>
            </value>
            <value>
                <fullName>Delivered Client Seminars</fullName>
            </value>
            <value>
                <fullName>HR Consulting</fullName>
            </value>
            <value>
                <fullName>Products/Services</fullName>
            </value>
            <value>
                <fullName>Pilot-Advisory Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>