force-app/main/default/objects/ReferenceHRGActivity__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes on this activity</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>