force-app/main/default/objects/ReferenceHRGActivity__c/fields/Onsite_Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Meeting_Attendees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required due to COVID-19 requirement to track attendees</inlineHelpText>
    <label>Onsite Meeting Attendees</label>
    <type>TextArea</type>
</CustomField>