force-app/main/default/objects/ReferenceHRGActivity__c/fields/Reference_HRG__c.field-meta.xml
<CustomField>
    <fullName>Reference_HRG__c</fullName>
    <label>Reference HRG</label>
    <referenceTo>Reference_HRG__c</referenceTo>
    <relationshipLabel>Reference HRG Activities</relationshipLabel>
    <relationshipName>Reference_HRG_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>