force-app/main/default/objects/ReferenceHRGActivity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal (no client contact)</fullName>
            </value>
            <value>
                <fullName>Email-One Way</fullName>
            </value>
            <value>
                <fullName>Email-Two Way</fullName>
            </value>
            <value>
                <fullName>Fax-One Way</fullName>
            </value>
            <value>
                <fullName>Fax-Two Way</fullName>
            </value>
            <value>
                <fullName>Mail-One Way</fullName>
            </value>
            <value>
                <fullName>Mail-Two Way</fullName>
            </value>
            <value>
                <fullName>Onsite-One Way</fullName>
            </value>
            <value>
                <fullName>Onsite-Two Way</fullName>
            </value>
            <value>
                <fullName>Scheduled Call-One Way</fullName>
            </value>
            <value>
                <fullName>Scheduled Call-Two Way</fullName>
            </value>
            <value>
                <fullName>Social Media-One Way</fullName>
            </value>
            <value>
                <fullName>Social Media-Two Way</fullName>
            </value>
            <value>
                <fullName>Text-One Way</fullName>
            </value>
            <value>
                <fullName>Text-Two Way</fullName>
            </value>
            <value>
                <fullName>Unscheduled Call-One Way</fullName>
            </value>
            <value>
                <fullName>Unscheduled Call-Two Way</fullName>
            </value>
            <value>
                <fullName>Web-ex-One Way</fullName>
            </value>
            <value>
                <fullName>Web-ex-Two Way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>