force-app/main/default/objects/ReferenceHRGActivity__c/recordTypes/Reference_HRG_Activities_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Reference_HRG_Activities_Record_Type</fullName>
    <active>true</active>
    <label>Reference HRG Activities Record Type</label>
</RecordType>